fixed horizontal scrolling

--- a/styles.css
+++ b/styles.css
@@ -740,13 +740,13 @@ header {
 
 @media screen and (max-width: 768px) {
   .showcase {
-      padding-top: 14rem;
+      padding-top: 10rem;
       flex-direction: column;
   }
   
   .showcase-content h2 {
     text-align: center;
-    font-size:  2rem;  
+    font-size:  2.5rem;  
     font-weight: bold;
   }
 
